Bug 1331349 Fix printf formatting errors in MinGW compilation r=froydnj

MozReview-Commit-ID: A4PMABfxzez